tests/ui/field_default_and_with.stderr
error: `with` and `default` are mutually exclusive on a field
 --> tests/ui/field_default_and_with.rs:5:25
  |
5 |   #[quickcheck(default, with = "whatever")]
  |                         ^^^^
